@@ -22,6 +22,7 @@ Version 2.2
   * Silver (PR#537)
   * HSAIL (PR#518)
   * JSGF (PR#546)
+  * NCAR command language (PR#536)
 
 - Added `lexers.find_lexer_class_by_name()`. (#1203)
 
